*update names, favicon and metadata.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
  <!-- twitter card data thing -->
  <meta name=twitter:card        content='summary_large_image'>
- <meta name=twitter:site        content='@tldmod'>
- <meta name=twitter:title       content='&#171;The Last Days of the Third Age&#187; Nightly patches'>
+ <meta name=twitter:site        content='@swconquest'>
+ <meta name=twitter:title       content='&#171;SWC&#187; Nightly patches'>
  <meta name=twitter:description content='Download our latest and finest version from here, our official page.'>
- <meta name=twitter:image       content='http://images.akamai.steamusercontent.com/ugc/630854895415240375/DB817458B3BF31DB00C5EF4130527CF625DC63E6/'>
+ <meta name=twitter:image       content='http://images.akamai.steamusercontent.com/ugc/445115829667666993/EA021E057A2B6592FDBA1D97C878403EFBED68B0/'>
  <meta name=twitter:creator     content='@swyterzone'>
 
  <title>The Last Days · Nightly patches</title>
@@ -30,8 +30,8 @@
  <meta name=google-site-verification content='76_XklhKj9t-RBUzLkFuM64n7nNAK3TKnDLMIcyIxcM'>
 
  <!-- keep /index.html out of the picture, just in case -->
- <link rel=canonical href='https://tldmod.github.io/'>
- 
+ <link rel=canonical href='https://swconquest.github.io/'>
+
  <style>
   @font-face
   {
@@ -254,10 +254,10 @@
 </head>
 <body role=main>
  <header>
-  <h1><em>The Last Days</em> nightly patches!</h1>
+  <h1><em>SWC</em> nightly patches!</h1>
  </header>
  <p>
-  <em>The Last Days of the Third Age</em> is a long-standing, community-developed Tolkien-based mod for <em>Mount&amp;Blade</em> and <em>Mount&amp;Blade Warband</em>.
+  <em>Star Wars Conquest</em> is a long-standing, community-developed Tolkien-based mod for <em>Mount&amp;Blade</em> and <em>Mount&amp;Blade Warband</em>.
  </p>
  <p>
   Nightly patches are automatically generated development builds baked by a helpful bot, which you can use to stay on the bleeding edge.<br/><br/>
@@ -293,7 +293,7 @@
   </label>
 
   <if-wb><not-mac>
-   <p><a target=_blank href=https://steamcommunity.com/sharedfiles/filedetails/?id=299974223#profileBlock>Subscribe to the Steam Workshop version</a> to get automatic updates.</p>
+   <p><a target=_blank href=https://steamcommunity.com/sharedfiles/filedetails/?id=742671195#profileBlock>Subscribe to the Steam Workshop version</a> to get automatic updates.</p>
    <p><i>(Remember to wait until the big download has completed before playing the mod!)</i></p>
    <p style="text-align: center; border-bottom: 1px solid; height: 14px; margin-bottom: 36px;"><legend style="display: inline-block; background: rgba(34, 26, 24, 0.85) none repeat scroll 0% 0%; padding-left: 20px; padding-right: 20px; border-radius: 7px; border: 1px solid;">Or just download it manually...</legend></p>
   </not-mac></if-wb>
