--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <meta name=viewport    content='width=device-width, initial-scale=1'>
  <meta name=author      content='swyter'>
  <meta name=description content='Here&#39;s the official mod download page with the latest releases for Warband and Mount&amp;Blade 1.011.'>
- <meta name=keywords    content='the last days of the third age, the last days, mount and blade, mod, lotr, official, download, warband, 1.011, nightly, patches, tolkien, lord of the rings, module, total conversion'>
+ <meta name=keywords    content='star wars conquest, swc, swconquest, mount and blade, mod, star wars, official download, warband, 1.011, nightly, patches, builds, nightlies, game, total conversion, taleworlds, fan, fanmade, steam workshop'>
 
  <!-- twitter card data thing -->
  <meta name=twitter:card        content='summary_large_image'>
@@ -17,7 +17,7 @@
  <meta name=twitter:image       content='http://images.akamai.steamusercontent.com/ugc/445115829667666993/EA021E057A2B6592FDBA1D97C878403EFBED68B0/'>
  <meta name=twitter:creator     content='@swyterzone'>
 
- <title>The Last Days · Nightly patches</title>
+ <title>Star Wars Conquest · Nightly patches</title>
 
  <!-- random favicon-related stuff -->
  <link rel=icon     href='favicon.ico' sizes='16x16 32x32 48x48'>
@@ -336,7 +336,7 @@
   <p>
     <b><em>To install:</em></b>
     <not-mac>
-    Extract them sequentially, dragging and dropping a <em><abbr title='The Last Days of the Third Age'>TLD</abbr></em> directory inside of the
+    Extract them sequentially, dragging and dropping a <em><abbr title='Star Wars Conquest'>SWC</abbr></em> directory inside of the
 
     <!-- if you think that those *blank comments* are a bit fishy and unsightly, welcome to utopia land!
          they are there to hide carriage returns to the markup parser, otherwise adds extra spaces between words -->
@@ -351,10 +351,8 @@
     --></abbr><!--
   --></if-wb>, overwriting time after time.
 
-    <if-mb>Once you are done, navigate into the <em><abbr title='The Last Days of the Third Age'>TLD</abbr></em> folder, copy a file called <em>dinput8.dll</em>, go up a few times and paste it next to <em>Mount&amp;Blade.exe</em>, into the game's root.</if-mb>
-
     Then just select the mod from the launcher's drop-down list and play.
-    
+
     </not-mac>
     <!-- here's our mac notice, for those stylish special snowflakes -->
     <mac><!--
@@ -364,11 +362,11 @@
 
   <nav>
     <p id=links role=navigation>
-      <a href=https://trello.com/b/ntzYNdEA/             title='Visit the place where we organize ourselves.'        target=tab>To-do list</a> |
-      <a href=http://synnaskole.sweb.cz/TLDManual3.3.pdf title='Visit the comprehensive PDF help file.'              target=tab>Manual</a> |
-      <a href=http://moddb.com/mods/the-last-days/       title='Visit the place where our players rate and comment.' target=tab>ModDB profile</a> |
-      <a href=http://goo.gl/yIw0od                       title='Subscribe for automatic mod updates.'                target=tab>Steam Workshop</a> |
-      <a href=https://twitter.com/tldmod                 title='Visit the place where we keep you updated.'          target=tab>Twitter</a>
+      <a href=https://trello.com/b/YmttTdFo/             title='Visit the place where we organize ourselves.'        target=tab>To-do list</a> |
+      <!--a href=http://synnaskole.sweb.cz/TLDManual3.3.pdf title='Visit the comprehensive PDF help file.'              target=tab>Manual</a> | -->
+      <a href=http://moddb.com/mods/swconquest/          title='Visit the place where our players rate and comment.' target=tab>ModDB profile</a> |
+      <a href=http://goo.gl/j7s5Fy                       title='Subscribe for automatic mod updates.'                target=tab>Steam Workshop</a> |
+      <a href=https://twitter.com/swconquest             title='Visit the place where we keep you updated.'          target=tab>Twitter</a>
     </p>
   </nav>
  </section>
