*final content changes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!-- twitter card data thing -->
  <meta name=twitter:card        content='summary_large_image'>
  <meta name=twitter:site        content='@swconquest'>
- <meta name=twitter:title       content='&#171;SWC&#187; Nightly patches'>
+ <meta name=twitter:title       content='&#171;Star Wars Conquest&#187; Nightly patches'>
  <meta name=twitter:description content='Download our latest and finest version from here, our official page.'>
  <meta name=twitter:image       content='http://images.akamai.steamusercontent.com/ugc/445115829667666993/EA021E057A2B6592FDBA1D97C878403EFBED68B0/'>
  <meta name=twitter:creator     content='@swyterzone'>
@@ -257,7 +257,7 @@
   <h1><em>SWC</em> nightly patches!</h1>
  </header>
  <p>
-  <em>Star Wars Conquest</em> is a long-standing, community-developed Tolkien-based mod for <em>Mount&amp;Blade</em> and <em>Mount&amp;Blade Warband</em>.
+  <em>Star Wars Conquest</em> is a long-standing, community-developed mod based on the worlds imagined by George Lucas, created for <em>Mount&amp;Blade</em> and <em>Mount&amp;Blade Warband</em>.
  </p>
  <p>
   Nightly patches are automatically generated development builds baked by a helpful bot, which you can use to stay on the bleeding edge.<br/><br/>
@@ -275,7 +275,7 @@
      <li lang=pl>Polski (95%)</li>
      <li lang=it>Italiano (87%)</li>
      <li>
-      <a href=https://transifex.com/projects/p/tld/ target=tab>Want to contribute?</a>
+      <a href=https://transifex.com/projects/p/swconquest/ target=tab>Want to contribute?</a>
      </li>
   </ul>
  </section>
