*set the background color to the bottom edge terminator.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   html
   {
-    background:#2a2a2b;
+    background:#282222;
     color:#985;
     text-shadow:2px 1px black;
     font-family:cursive;
