Fix the Mac link. Add Iron Launcher reference.

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <b><em>To install:</em></b>
     <not-mac>
     Extract them sequentially, dragging and dropping a <em><abbr title='Star Wars Conquest'>SWC</abbr></em> directory inside of the
-
+    
     <!-- if you think that those *blank comments* are a bit fishy and unsightly, welcome to utopia land!
          they are there to hide carriage returns to the markup parser, otherwise adds extra spaces between words -->
     <if-mb>
@@ -351,12 +351,14 @@
     --></abbr><!--
   --></if-wb>, overwriting time after time.
 
+    <if-mb>Once you are done, navigate into the <em><abbr title='Star Wars Conquest'>SWC</abbr></em> folder, copy a file called <em>dinput8.dll</em>, go up a few times and paste it next to <em>Mount&amp;Blade.exe</em>, into the game's root.</if-mb>
+
     Then just select the mod from the launcher's drop-down list and play.
 
     </not-mac>
     <!-- here's our mac notice, for those stylish special snowflakes -->
     <mac><!--
-   -->Mac OS X users have the buggiest version of the game, a few workarounds are needed to play our mod, <a href="http://steamcommunity.com/workshop/filedetails/discussion/299974223/361787186436486677/#forum_op_361787186436486677">follow our Mac installation guide.</a>
+   -->Mac OS X users have the buggiest version of the game, a specific install guide will be released soon!<!--a few workarounds are needed to play our mod, <a href="http://steamcommunity.com/workshop/filedetails/discussion/299974223/361787186436486677/#forum_op_361787186436486677">follow our Mac installation guide.</a>-->
     </mac>
   </p>
 
