--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
    <p style="text-align: center; border-bottom: 1px solid; height: 14px; margin-bottom: 36px;"><legend style="display: inline-block; background: rgba(34, 26, 24, 0.85) none repeat scroll 0% 0%; padding-left: 20px; padding-right: 20px; border-radius: 7px; border: 1px solid;">Or just download it manually...</legend></p>
   </not-mac></if-wb>
   <ol>
-    <li>Latest standalone version of the mod — <em>swconquest-094-final.7z</em>
+    <li>Latest standalone version of the mod — <em>swc-094-final.7z</em>
       <span>
         Download from
         <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final.7z>Bitbucket</a><!-- or
@@ -308,7 +308,7 @@
 
     <if-wb>
     <li>
-     Warband compatibility patch. — <em>swconquest-094-final-wbcompat.7z</em>
+     Warband compatibility patch. — <em>swc-094-final-wbcompat.7z</em>
       <span>
         Download from
         <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final-wbcompat.7z>Bitbucket</a><!-- or
