Add representative image of the page.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
  <title>Star Wars Conquest · Nightly patches</title>
 
  <!-- random favicon-related stuff -->
- <link rel=icon     href='favicon.ico' sizes='16x16 32x32 48x48'>
- <link rel=manifest href='manifest.json'>
+ <link rel=icon      href='favicon.ico' sizes='16x16 32x32 48x48'>
+ <link rel=manifest  href='manifest.json'>
+ <link rel=image_src href='http://images.akamai.steamusercontent.com/ugc/445115829667666993/EA021E057A2B6592FDBA1D97C878403EFBED68B0/'>
 
  <meta name=msapplication-TileColor  content='#685555'>
  <meta name=theme-color              content='#dadada'>
@@ -298,7 +299,7 @@
    <p style="text-align: center; border-bottom: 1px solid; height: 14px; margin-bottom: 36px;"><legend style="display: inline-block; background: rgba(34, 26, 24, 0.85) none repeat scroll 0% 0%; padding-left: 20px; padding-right: 20px; border-radius: 7px; border: 1px solid;">Or just download it manually...</legend></p>
   </not-mac></if-wb>
   <ol>
-    <li>Latest standalone version of the mod — <em>swc-094-final.7z</em>
+    <li>Latest standalone version of the mod — <em>swc-094.7z</em>
       <span>
         Download from
         <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final.7z>Bitbucket</a><!-- or
@@ -308,7 +309,7 @@
 
     <if-wb>
     <li>
-     Warband compatibility patch. — <em>swc-094-final-wbcompat.7z</em>
+     Warband compatibility patch. — <em>swc-094-wbcompat.7z</em>
       <span>
         Download from
         <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final-wbcompat.7z>Bitbucket</a><!-- or
