Enable nightly build scrapping. :)

--- a/index.html
+++ b/index.html
@@ -318,20 +318,20 @@
     </li>
     </if-wb>
 
-    <!--li>
+    <li>
       Latest nightly patch for <if-wb>Warband</if-wb><if-mb>M&amp;B 1.011</if-mb> (from <if-wb><em id=nightly_date_warband>2015/04/23 *checking*</em></if-wb><!--
-                                                                                     -- ><if-mb><em id=nightly_date_mab1011>2015/04/23 *checking*</em></if-mb>)
+                                                                                     --><if-mb><em id=nightly_date_mab1011>2015/04/23 *checking*</em></if-mb>)
       <span>
         Download from
         <if-wb>
-          <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/SWC_094_wbcompat_nightly_patch_2015.04.23-14.13_r2043.7z id=nightly_link_warband>Bitbucket</a>
+          <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final-wbcompat_nightly_2016.09.24-16.51_r1177.7z id=nightly_link_warband>Bitbucket</a>
         </if-wb>
         <if-mb>
-          <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/SWC_094_nightly_patch_2015.04.23-14.13_r2043.7z id=nightly_link_mab1011>Bitbucket</a>
+          <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/swconquest-094-final_nightly_2016.09.24-16.51_r1177.7z id=nightly_link_mab1011>Bitbucket</a>
         </if-mb>
         <a href=https://bitbucket.org/Swyter/swconquest-downloads/downloads/ target=tab><em>(see more)</em></a>.
       </span>
-    </li -->
+    </li>
   </ol>
 
   <p>
@@ -437,15 +437,15 @@
     jsonp.setAttribute("src","//whateverorigin.herokuapp.com/get?url="+url+"&callback="+random_id);
     document.head.appendChild(jsonp);
   }
-  /* here's the real meal V * /
+  /* here's the real meal V */
   shitty_jsonp("http://bitbucket.org/Swyter/swconquest-downloads/downloads", function(json)
   {
     console.log("Starting to scrape the TLD downloads page & table!\n");
     window.bb_downloads = (new DOMParser).parseFromString(json.contents, "text/html");
     window.bb_uploads_table = bb_downloads.getElementById("uploaded-files");
-    /* grab the array of elements in the table * /
+    /* grab the array of elements in the table */
     window.bb_uploads_table = bb_uploads_table.children[1].children;
-    /* default paleolithic date to compare against * /
+    /* default paleolithic date to compare against */
     window.mb_date = new Date("1992-01-01");
     window.wb_date = new Date("1992-01-01");
     for(child in bb_uploads_table)
@@ -457,8 +457,8 @@
         var cur_href = bb_uploads_table[child].getElementsByClassName("execute")[0].attributes["href"].textContent;
         if (cur_date && cur_href)
         {
-          /* mab1011 link? * /
-          if(cur_href.indexOf("SWC_094_nightly_patch_") != -1)
+          /* mab1011 link? */
+          if(cur_href.indexOf("swconquest-094-final_nightly_") != -1)
           {
             //console.log("This is a mab1011 link!");
             //console.log((+cur_date) +" "+ (+mb_date));
@@ -469,8 +469,8 @@
               window.mb_href = cur_href;
             }
           }
-          /* warband link? * /
-          else if(cur_href.indexOf("SWC_094_wbcompat_nightly_patch_") != -1)
+          /* warband link? */
+          else if(cur_href.indexOf("swconquest-094-final-wbcompat_nightly_") != -1)
           {
             //console.log("This is a warband link!");
             if(+cur_date > +wb_date)
@@ -489,14 +489,14 @@
       console.log("latest Warband nightly URL: "+ wb_href +", uploaded on "+ wb_date);
       console.log("latest MB 1011 nightly URL: "+ mb_href +", uploaded on "+ mb_date);
       /* probably a fine example of why js sucks,
-         try to format dates in a compact way w/o ending churning out spaguetti code * /
+         try to format dates in a compact way w/o ending churning out spaguetti code */
       document.getElementById("nightly_date_mab1011").textContent =             mb_date.getFullYear()            + "/" +
                                                                    ( "0" + (1 + mb_date.getMonth()) ).substr(-2) + "/" +
                                                                    ( "0" +      mb_date.getDate()   ).substr(-2);
       document.getElementById("nightly_date_warband").textContent =             wb_date.getFullYear()            + "/" +
                                                                    ( "0" + (1 + wb_date.getMonth()) ).substr(-2) + "/" +
                                                                    ( "0" +      wb_date.getDate()   ).substr(-2);
-      /* replace the static links with the latest scrapped ones * /
+      /* replace the static links with the latest scrapped ones */
       document.getElementById("nightly_link_mab1011").href = "https://bitbucket.org" + mb_href.trim();
       document.getElementById("nightly_link_warband").href = "https://bitbucket.org" + wb_href.trim();
     }
@@ -506,7 +506,6 @@
     }
   });
   
-  */
   
   /*
    * DOMParser HTML extension
