Make the background prettier when stretched in a widescreen monitor. So that the galaxy remains at the top.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   {
     html
     {
-      background-position: center center;
+      /* background-position: center center; */
       background-size: cover;
     }
   }
