Make the abbr inline again.

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   abbr
   {
     border-bottom: 1px dotted rgba(255, 255, 255, 0.1);
-    display: inline-block;
+    display: inline;
     line-height: 15px;
   }
 
